@@ -38,6 +38,7 @@ namespace TestWebKitAPI {
 
 namespace {
 
+static Lock lock;
 static constexpr bool verbose = false;
 
 enum NotifyStyle {
@@ -46,20 +47,20 @@ enum NotifyStyle {
 };
 
 template<typename Functor>
-void wait(UncheckedCondition& condition, std::unique_lock<UncheckedLock>& locker, const Functor& predicate, Seconds timeout)
+void wait(Condition& condition, const Functor& predicate, Seconds timeout) WTF_REQUIRES_LOCK(lock)
 {
     if (timeout == Seconds::infinity())
-        condition.wait(locker, predicate);
+        condition.wait(lock, predicate);
     else {
         // This tests timeouts in the sense that it verifies that we can call wait() again after a
         // timeout happened. That's a non-trivial piece of functionality since upon timeout the
         // ParkingLot has to remove us from the queue.
         while (!predicate())
-            condition.waitFor(locker, timeout, predicate);
+            condition.waitFor(lock, timeout, predicate);
     }
 }
 
-void notify(NotifyStyle notifyStyle, UncheckedCondition& condition, bool shouldNotify)
+void notify(NotifyStyle notifyStyle, Condition& condition, bool shouldNotify)
 {
     switch (notifyStyle) {
     case AlwaysNotifyOne:
@@ -83,9 +84,8 @@ void runTest(
 {
     Deque<unsigned> queue;
     bool shouldContinue = true;
-    UncheckedLock lock;
-    UncheckedCondition emptyCondition;
-    UncheckedCondition fullCondition;
+    Condition emptyCondition;
+    Condition fullCondition;
 
     Vector<Ref<Thread>> consumerThreads;
     Vector<Ref<Thread>> producerThreads;
@@ -101,9 +101,9 @@ void runTest(
                     unsigned result;
                     unsigned shouldNotify = false;
                     {
-                        std::unique_lock<UncheckedLock> locker(lock);
+                        Locker locker { lock };
                         wait(
-                            emptyCondition, locker, 
+                            emptyCondition,
                             [&] () {
                                 if (verbose)
                                     dataLog(toString(Thread::current(), ": Checking consumption predicate with shouldContinue = ", shouldContinue, ", queue.size() == ", queue.size(), "\n"));
@@ -134,9 +134,9 @@ void runTest(
                 for (unsigned i = 0; i < numMessagesPerProducer; ++i) {
                     bool shouldNotify = false;
                     {
-                        std::unique_lock<UncheckedLock> locker(lock);
+                        Locker locker { lock };
                         wait(
-                            fullCondition, locker,
+                            fullCondition,
                             [&] () {
                                 if (verbose)
                                     dataLog(toString(Thread::current(), ": Checking production predicate with shouldContinue = ", shouldContinue, ", queue.size() == ", queue.size(), "\n"));
